<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/login_acitivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.yiyi.zhihu.ui.login.LoginAcitivity">

    <include layout="@layout/common_toolbar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/login_bg">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/splash_logo"
            android:layout_marginTop="@dimen/space_60"
            android:layout_marginBottom="@dimen/space_45"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_25"
            android:gravity="center_horizontal"
            android:text="@string/login_with_weibo"
            android:textColor="@android:color/white"/>

        <Button
            android:layout_width="@dimen/space_300"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/space_50"
            android:paddingRight="@dimen/space_50"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/space_20"
            android:layout_marginBottom="@dimen/space_45"
            android:drawableLeft="@drawable/account_sina"
            android:text="@string/sina_weibo"
            android:background="@drawable/btn_selector"/>

        <Button
            android:layout_width="@dimen/space_300"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/space_50"
            android:paddingRight="@dimen/space_50"
            android:layout_gravity="center_horizontal"
            android:drawableLeft="@drawable/account_tencent"
            android:text="@string/tencent_weibo"
            android:background="@drawable/btn_selector"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_120"
            android:gravity="center_horizontal"
            android:text="@string/defination"
            android:textSize="@dimen/textSize_12"
            android:textColor="@color/colorDefination"/>

    </LinearLayout>

</LinearLayout>
